--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -65,3 +65,11 @@ h1 {
   font-weight: 500;
   width: 50%;
 }
+
+.form-head {
+  text-align: center;
+}
+
+#form-signup-text {
+  margin-bottom: 0%;
+}
