--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   height: 50px;
-  /* align-items: center; */
   justify-content: space-between;
   position: fixed;
   left: 0;
@@ -28,6 +27,20 @@
 }
 
 .logout-btn {
-  width: 150px;
+  width: 100%;
   height: 50px;
+  border-radius: 5px;
+  font-weight: 800;
+}
+
+.nav-btns {
+  margin: 6px;
+  width: 15%;
+}
+
+.nav-greet {
+  margin: 25px auto;
+  color: white;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 800;
 }
