--- a/src/styles/RecruiterJobs.css
+++ b/src/styles/RecruiterJobs.css
@@ -13,3 +13,34 @@
 .add-job-btn:hover {
   cursor: pointer;
 }
+
+.carousel-container-recruiter {
+  height: 60vh;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.carousel-container-recruiter > div > p {
+  font-size: medium !important;
+}
+
+.no-jobs-msg {
+  border: 1px solid black;
+  width: 70%;
+  margin: 300px auto 250px auto;
+  text-align: center;
+  padding: 10px;
+  background: white;
+  border-radius: 8px;
+  font-weight: 500;
+}
+
+.carousel-container-recruiter > div {
+  height: 60vh;
+}
+
+.jobs-container-recruiter {
+  height: 400px;
+}
