--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -4,7 +4,7 @@ h1 {
 
 .signup-container {
   width: 65%;
-  margin: 15vh auto;
+  margin: 100px auto 10px auto;
   border: 1px solid grey;
   background-color: white;
   border-radius: 10px;
@@ -36,7 +36,7 @@ h1 {
 .form-inputs {
   margin: 5px auto;
   width: 100%;
-  height: 3vh;
+  height: 4vh;
   border-radius: 5px;
 }
 
