--- a/src/styles/Signin.css
+++ b/src/styles/Signin.css
@@ -2,17 +2,13 @@ h1 {
   margin-top: 0;
 }
 
-.signup-container-2 {
+.signin-container {
   width: 75%;
-  margin: 15vh auto;
+  margin: 130px auto 10px auto;
   border: 1px solid grey;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  position: absolute;
-  top: 40px;
-  left: 60px;
-  z-index: 99;
 }
 
 .signup-form-container {
@@ -40,7 +36,7 @@ h1 {
 .form-inputs {
   margin: 5px auto;
   width: 100%;
-  height: 3vh;
+  height: 4vh;
   border-radius: 5px;
 }
 
