--- a/src/styles/Applicant.css
+++ b/src/styles/Applicant.css
@@ -1,11 +1,19 @@
 .job-section-3 {
-  width: 70%;
-  margin: 100px auto;
-  padding: 20px;
+  width: 76%;
+  margin: 20px auto;
+  padding: 15px;
   border: 2px solid white;
   border-radius: 10px;
   height: 150px;
   background: white;
+}
+
+.job-section-3 > .job-details > p {
+  margin-top: 0px;
+} 
+
+.control-dots {
+  bottom: -15px !important;
 }
 
 .job-details {
@@ -29,10 +37,10 @@
   height: 30px;
   background: rgb(9, 219, 9);
   border-radius: 5px;
-  padding: 7px 25%;
+  padding: 7px 20%;
   color: blue;
   font-weight: 400;
-  margin-top: 10px;
+  margin-top: 20px;
   text-decoration: none;
   align-self: center;
 }
