--- a/src/styles/Job.css
+++ b/src/styles/Job.css
@@ -1,11 +1,15 @@
 .job-section {
-  width: 70%;
-  margin: 10px auto;
-  padding: 20px;
+  width: 75%;
+  margin: 60px auto;
+  padding: 15px;
   border: 2px solid white;
   border-radius: 10px;
-  height: 300px;
+  height: 250px;
   background: white;
+}
+
+.job-section > .job-details > p {
+  margin-top: 0px;
 }
 
 .job-details {
@@ -33,9 +37,10 @@
   height: 30px;
   background: rgb(9, 219, 9);
   border-radius: 5px;
-  padding: 7px 25%;
+  padding: 7px 20%;
   color: blue;
   font-weight: 400;
+  /* margin-top: 10px; */
 }
 
 .job-btn > a {
