--- a/src/styles/JobApplicants.css
+++ b/src/styles/JobApplicants.css
@@ -11,12 +11,21 @@
 
 .job-section-2 {
   width: 70%;
-  margin: 100px auto;
+  margin: 90px auto 10px auto;
   padding: 20px;
   border: 2px solid white;
   border-radius: 10px;
-  height: 200px;
+  height: 150px;
   background: white;
+}
+
+.applicants-list {
+  height: 250px;
+  margin-top: 30px;
+}
+
+.job-section-2 > .job-details > p {
+  margin: 0px;
 }
 
 .job-details {
@@ -70,11 +79,11 @@
 }
 
 .carousel-container-applicant {
-  height: 40vh;
+  height: 220px;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   padding-top: -50px;
 }
 
