Add Back button in recruiter and applicants view in job details page

--- a/src/styles/JobApplicants.css
+++ b/src/styles/JobApplicants.css
@@ -45,7 +45,7 @@
 }
 
 .job-refresh-btn {
-  width: 45%;
+  width: 30%;
   height: 40px;
   margin-top: 10px;
   color: blue;
@@ -56,7 +56,7 @@
 }
 
 .job-delete-btn {
-  width: 45%;
+  width: 30%;
   height: 40px;
   font-weight: 400;
   font-size: large;
@@ -94,3 +94,7 @@
 .no-jobs-msg-applicant-list {
 
 } */
+
+button {
+  cursor: pointer;
+}
