--- a/src/styles/Applicant.css
+++ b/src/styles/Applicant.css
@@ -9,8 +9,8 @@
 }
 
 .job-section-3 > .job-details > p {
-  margin-top: 0px;
-} 
+  margin-top: 0;
+}
 
 .control-dots {
   bottom: -15px !important;
