--- a/src/styles/Job.css
+++ b/src/styles/Job.css
@@ -9,7 +9,7 @@
 }
 
 .job-section > .job-details > p {
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 .job-details {
@@ -40,6 +40,7 @@
   padding: 7px 20%;
   color: blue;
   font-weight: 400;
+
   /* margin-top: 10px; */
 }
 
