--- a/src/styles/Signin.css
+++ b/src/styles/Signin.css
@@ -73,3 +73,16 @@ h1 {
 #form-signup-text {
   margin-bottom: 0%;
 }
+
+.signin-error,
+.validationError {
+  width: 100%;
+  text-align: center;
+  background-color: rgb(248, 95, 95);
+  color: white;
+}
+
+.server-error-section-signin,
+.form-validation {
+  margin: 10px auto;
+}
